Fix noscript text being hard to read

--- a/client/src/assets/_document.scss
+++ b/client/src/assets/_document.scss
@@ -16,6 +16,7 @@ body {
 
 body {
     background-color: $color-bg;
+    color: #ccc;
     margin: 0;
 }
 
@@ -78,4 +79,12 @@ select {
 
 .bi {
     vertical-align: middle;
+}
+
+.noscript {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
 }
